// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fetchAsync should fire acync fetching 1`] = `[Function]`;

exports[`fetchPost should fire acync fetching 1`] = `[Function]`;

exports[`fill should start filling data 1`] = `
Object {
  "payload": Object {
    "name": "posts",
  },
  "type": "POSTS_FILL",
}
`;

exports[`fill should start filling data 2`] = `
Object {
  "payload": Object {
    "name": "post",
  },
  "type": "POST_FILL",
}
`;

exports[`setFetchingError should output an error 1`] = `
Object {
  "error": true,
  "payload": "We have a problem",
  "type": "POSTS_SET_FETCHING_ERROR",
}
`;

exports[`setFetchingError should output an error 2`] = `
Object {
  "error": true,
  "payload": "We have a problem",
  "type": "POST_SET_FETCHING_ERROR",
}
`;

exports[`startFetching should start fetching 1`] = `
Object {
  "type": "POSTS_START_FETCHING",
}
`;

exports[`startFetching should start fetching 2`] = `
Object {
  "type": "POST_START_FETCHING",
}
`;

exports[`stopFetching should stop fetching 1`] = `
Object {
  "type": "POSTS_STOP_FETCHING",
}
`;

exports[`stopFetching should stop fetching 2`] = `
Object {
  "type": "POST_STOP_FETCHING",
}
`;
